[tool.poetry]
name = "ml-classification-sdk"
version = "0.1.0"
description = ""
authors = ["José Tomás Lavín León <jlavinleon@alumni.unav.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
